# handler/auth_interceptor.go
@@ -1,0 +1,86 @@
+package handler
+
+import (
+	"context"
+	"log"
+
+	"github.com/SemmiDev/todo-app/common/token"
+	"google.golang.org/grpc"
+	"google.golang.org/grpc/codes"
+	"google.golang.org/grpc/metadata"
+	"google.golang.org/grpc/status"
+)
+
+type AuthInterceptor struct {
+	jwtManager      *token.JWTManager
+	accessibleRoles map[string][]string
+}
+
+func NewAuthInterceptor(jwtManager *token.JWTManager, accessibleRoles map[string][]string) *AuthInterceptor {
+	return &AuthInterceptor{jwtManager, accessibleRoles}
+}
+
+func (interceptor *AuthInterceptor) Unary() grpc.UnaryServerInterceptor {
+	return func(
+		c context.Context,
+		req interface{},
+		info *grpc.UnaryServerInfo,
+		handler grpc.UnaryHandler,
+	) (interface{}, error) {
+		log.Println("--> unary interceptor: ", info.FullMethod)
+		err := interceptor.authorize(c, info.FullMethod)
+		if err != nil {
+			return nil, err
+		}
+		return handler(c, req)
+	}
+}
+
+func (interceptor *AuthInterceptor) Stream() grpc.StreamServerInterceptor {
+	return func(
+		srv interface{},
+		stream grpc.ServerStream,
+		info *grpc.StreamServerInfo,
+		handler grpc.StreamHandler,
+	) error {
+		log.Println("--> stream interceptor: ", info.FullMethod)
+		err := interceptor.authorize(stream.Context(), info.FullMethod)
+		if err != nil {
+			return err
+		}
+
+		return handler(srv, stream)
+	}
+}
+
+func (interceptor *AuthInterceptor) authorize(c context.Context, method string) error {
+	accessibleRoles, ok := interceptor.accessibleRoles[method]
+	if !ok {
+		// semua orang bisa akses
+		return nil
+	}
+
+	md, ok := metadata.FromIncomingContext(c)
+	if !ok {
+		return status.Errorf(codes.Unauthenticated, "metadata is not provided")
+	}
+
+	values := md["authorization"]
+	if len(values) == 0 {
+		return status.Errorf(codes.Unauthenticated, "authorization token is not provided")
+	}
+
+	accessToken := values[0]
+	claims, err := interceptor.jwtManager.Verify(accessToken)
+	if err != nil {
+		return status.Errorf(codes.Unauthenticated, "access token is invalid: %v", err)
+	}
+
+	for _, role := range accessibleRoles {
+		if role == claims.Role {
+			return nil
+		}
+	}
+
+	return status.Error(codes.PermissionDenied, "no permission to access this RPC")
+}
